add some codeforces contest and practices