@@ -1,11 +1,13 @@
 package recursion;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class BinaryTree {
 
     public static void main(String[] args) {
-        List<Integer> dataInput = List.of(100, 80, 50, 90, 30, 60, 90, 85, 95, 120, 110, 108, 115, 140, 150);
+        List<Integer> dataInput = Arrays.asList(100, 80, 50, 90, 30, 60, 90, 85, 95, 120, 110, 108, 115, 140, 150);
         Node root = null;
 
         for (Integer value : dataInput) {
